<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/adapter_action"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_round"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="ABEV3" />

        <TextView
            android:id="@+id/adapter_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textColor="#4c4c4c"
            app:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adapter_label_1"
            tools:text="XXXXXXXXXXXXX" />

        <TextView
            android:id="@+id/adapter_label_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_msg_0"
            android:textAllCaps="true"
            android:textColor="#313131"
            android:textStyle="bold"
            app:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/adapter_label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_msg_1"
            android:textAllCaps="true"
            android:textColor="#313131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adapter_price" />

        <TextView
            android:id="@+id/adapter_label_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_msg_2"
            android:textAllCaps="true"
            android:textColor="#313131"
            app:layout_constraintEnd_toStartOf="@+id/adapter_label_4"
            app:layout_constraintStart_toEndOf="@+id/adapter_label_2"
            app:layout_constraintTop_toBottomOf="@+id/adapter_price" />

        <TextView
            android:id="@+id/adapter_label_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_msg_3"
            android:textAllCaps="true"
            android:textColor="#313131"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adapter_price" />

        <TextView
            android:id="@+id/adapter_media"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:textColor="#4c4c4c"
            android:textSize="12sp"
            app:fontFamily="@font/roboto"
            app:layout_constraintBottom_toBottomOf="@+id/adapter_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adapter_label_2"
            tools:text="000000000" />

        <TextView
            android:id="@+id/adapter_value"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="#4c4c4c"
            android:textSize="12sp"
            app:fontFamily="@font/roboto"
            app:layout_constraintBottom_toBottomOf="@+id/adapter_total"
            app:layout_constraintEnd_toStartOf="@+id/adapter_total"
            app:layout_constraintStart_toEndOf="@+id/adapter_media"
            app:layout_constraintTop_toBottomOf="@+id/adapter_label_2"
            tools:text="000000000" />

        <TextView
            android:id="@+id/adapter_total"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:textAllCaps="true"
            android:textColor="#4c4c4c"
            android:textSize="12sp"
            app:fontFamily="@font/roboto"
            app:layout_constraintBottom_toBottomOf="@+id/divisor_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adapter_label_2"
            app:layout_constraintVertical_bias="0.0"
            tools:text="000000000" />

        <View
            android:id="@+id/divisor_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="#d4d4d4"
            app:layout_constraintBottom_toTopOf="@+id/adapter_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/adapter_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:drawableLeft="@drawable/ic_history"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/home_msg_5"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableStart="@drawable/ic_history" />

        <TextView
            android:id="@+id/adapter_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:drawableEnd="@drawable/ic_right"
            android:drawableRight="@drawable/ic_right"
            android:gravity="center"
            android:text="@string/home_msg_4"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>